<resources>
    <string name="app_name">Van Sales</string>
    <string name="title_sales">Sales</string>
    <string name="title_items">Items</string>
    <string name="title_settings">Settings</string>
    <string name="title_transfers">Transfers</string>
    <string name="title_invoices">Invoices</string>
    <string name="string_plus">+</string>
    <string name="string_item_name">Item Name</string>
    <string name="string_item_code">Item Code</string>
    <string name="string_barcode">Barcode</string>
    <string name="string_price">Price</string>
    <string name="string_qty">Qty</string>
    <string name="string_sync">Sync</string>
    <string name="title_activity_settings">Settings</string>
</resources>
