<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <TextView
        android:id="@+id/listitem_item_itemCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/string_item_code"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_item_itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_item_name"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listitem_item_itemCode" />

    <TextView
        android:id="@+id/listitem_item_barCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_barcode"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listitem_item_itemName" />

    <TextView
        android:id="@+id/listitem_item_labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="13dp"
        android:text="@string/string_price"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_item_labelQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_qty"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listitem_item_labelPrice" />

    <TextView
        android:id="@+id/listitem_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/string_price"
        app:layout_constraintStart_toEndOf="@+id/listitem_item_labelPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listitem_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="@string/string_qty"
        app:layout_constraintStart_toEndOf="@+id/listitem_item_labelQty"
        app:layout_constraintTop_toBottomOf="@+id/listitem_item_price" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d6d6d6"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>