<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <TextView
        android:id="@+id/invoiceitem_item_itemCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/string_item_code"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/invoiceitem_item_itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_item_name"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invoiceitem_item_itemCode" />

    <TextView
        android:id="@+id/invoiceitem_item_barCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_barcode"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invoiceitem_item_itemName" />

    <TextView
        android:id="@+id/invoiceitem_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/string_price"
        android:textAlignment="viewStart"
        android:textColor="@color/colorNormalBGText"
        app:layout_constraintStart_toEndOf="@+id/invoiceitem_unit_spinner"
        app:layout_constraintTop_toTopOf="@+id/invoiceitem_sub_qty" />

    <EditText
        android:id="@+id/invoiceitem_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:text="@string/string_qty"
        android:textColor="@color/colorNormalBGGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/invoiceitem_add_qty"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/invoiceitem_add_qty"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="+"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/invoiceitem_sub_qty"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/panelBackground"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/invoiceitem_item_qty"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/invoiceitem_unit_spinner"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginEnd="155dp"
        android:layout_marginTop="8dp"
        android:dropDownWidth="100dp"
        android:padding="0dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>